# local-movie-cast

./: .gitignore  CLAUDE.md  README.md  autostart.py  build.bat  caster.py  config.example.yaml  config.py  local-movie-cast.spec  logging_setup.py  main.py  make_icon.py  net.py  positions.py  power.py  pyproject.toml  recents.py  requirements.txt  run.bat  setup_ffmpeg.bat  streamer.py  thumber.py  tray.py  version.py
static/: app.js  index.html  manifest.webmanifest  setup.css  setup.html  setup.js  style.css
