[project]
name = "local-movie-cast"
version = "0.1.0"
description = "Веб-UI для трансляции локальных фильмов на Google Chromecast в LAN"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "PyChromecast==14.0.10",
    "PyYAML==6.0.3",
    "pydantic==2.13.4",
    "pystray==0.19.5",
    "pillow==12.2.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
